Co-authored-by: PierreDaily <PierreDaily@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/1856c3b298.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/1856c3b298.js" crossorigin="anonymous"></script>
+        
         <title>Booki2</title>
     </head>
 
@@ -184,7 +185,7 @@
             <div class="bullepopulaire">
                 <a href="#"> 
                 <img class="bullepopu" src="assets/img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="populaire">
-                <span class="populairetexte">
+                <div class="populairetexte">
                 <h2 class="poputitre">Hôtel Le soleil du matin</h2>
                 <p>Nuit à partir de 128€</p>
                 <div class="popuicone">
@@ -194,7 +195,7 @@
                 <i class="fa-solid fa-star blue"></i>
                 <i class="fa-solid fa-star blue"></i>
                 </div>
-                </span>
+            </div>
                 </a>
             </div>
 
@@ -202,7 +203,7 @@
             <div class="bullepopulaire">
                 <a href="#">
                 <img class ="bullepopu bullepopu2" src="assets/img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="populaire2">
-                <span class="populairetexte">
+                <div class="populairetexte">
                 <h2 class="poputitre2">Au coeur de l'eau Chambres d'hôtes</h2>
                 <p>Nuit à partir de 71€</p>
                 <div class="popuicone">
@@ -212,7 +213,7 @@
                 <i class="fa-solid fa-star blue"></i>
                 <i class="fa-solid fa-star gris"></i>
                 </div>
-                </span>
+            </div>
             </a>
             </div>
 
@@ -220,7 +221,7 @@
             <div class="bullepopulaire">
                 <a href="#">
                 <img class="bullepopu" src="assets/img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="populaire3">
-                <span class="populairetexte">
+                <div class="populairetexte">
                 <h2 class="poputitre">Hôtel Tout bleu et blanc</h2>
                 <p>Nuit à partir de 68€</p>
                 <div class="popuicone">
@@ -230,7 +231,7 @@
                 <i class="fa-solid fa-star blue"></i>
                 <i class="fa-solid fa-star gris"></i>
                 </div>
-                </span>
+                </div>
             </a>
             </div>
 
@@ -258,8 +259,8 @@
                 <div class="bulle3">
                     <img class="croppimg3" src="assets/img/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="activité3">
                     <p>Iles du Frioul</p> 
-                    </a>
                 </div>
+                </a>
             </div>
                 <div class="bulle1">
                     <a href="#">
@@ -286,10 +287,10 @@
 
         </div>
     </section>
-
+</main>
 </div>
 
-</main>
+
     <footer>
         <nav>
             <ul>
